--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -107,6 +107,7 @@ service readmac /system/bin/readmac
     user root
     group root system radio qcom_diag bluetooth
     oneshot
+    disabled
 
 service ppd /system/bin/mm-pp-daemon
     class late_start
